--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        app:rippleColor="@color/colorSecondary"
         app:srcCompat="@drawable/ic_add_icon" />
     <!--app:srcCompat="@android:drawable/ic_add_icon" />-->
 
