--- a/app/src/main/res/layout/anime_component.xml
+++ b/app/src/main/res/layout/anime_component.xml
@@ -26,13 +26,27 @@
             android:textSize="25dp"
             android:textStyle="bold"
             android:layout_margin="4dp"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorOnSecondary"
             />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/language_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="2dp"
+                android:text="DUB"
+                android:background="#f5f5f5"
+                android:shadowColor="#363636"
+                />
+
 
             <TextView
                 android:layout_width="wrap_content"
